--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-responsive-carousel": "^3.2.23",
+    "scroll-carousel-react": "^1.0.0",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3"
   }
